Fixed guides view is in wrong position

--- a/src/css/shot-generator.css
+++ b/src/css/shot-generator.css
@@ -355,6 +355,17 @@ kbd {
   align-items: center;
 }
 
+#camera-view-view {
+  position: relative;
+  overflow: hidden;
+  background-color: #111114;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+
 #camera-canvas {
   position: absolute;
 }
